Change default janus.js port to 5020 as we use network_mode: host

--- a/rootfs/etc/apache2/sites-available/janus.conf
+++ b/rootfs/etc/apache2/sites-available/janus.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:80>
+<VirtualHost *:5020>
         # The ServerName directive sets the request scheme, hostname and port that
         # the server uses to identify itself. This is used when creating
         # redirection URLs. In the context of virtual hosts, the ServerName
@@ -9,15 +9,11 @@
         ServerName localhost
 
         ServerAdmin root@localhost
-        DocumentRoot /opt/janus/share/janus/demos/
-
-        <Directory /opt/janus/share/janus/demos/>
-                Options Indexes FollowSymLinks
+        DocumentRoot /opt/janus/share/janus/demos
+        <Location /opt/janus/share/janus/demos/janus.js>
                 AllowOverride None
                 Require all granted
-                DirectoryIndex index.html
-        </Directory>
-
+        </Location>
 
         # Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
         # error, crit, alert, emerg.
